--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,10 @@
+[ProjectSettings]
+ProjectID=(A=1823396784,B=1298598689,C=1743498150,D=-2048051708)
+ProjectName=First Person Template
+
+
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=AAA8B9EA4BBF10C66D0B36BEF6C99050
-ProjectName=Third Person Game Template
+ProjectID=2D92DAD3467CC0361498F4BC4E4BA12E
 
 [StartupActions]
 bAddPacks=True
